kubernetes/cluster/media/profilarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profilarr
  namespace: media
  labels:
    app.kubernetes.io/name: profilarr
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: profilarr.brhd.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: profilarr
                port:
                  name: http
  tls:
    - hosts:
        - profilarr.brhd.io
